Align openapi spec with https://github.com/dcm-project/catalog-manager/blob/main/api/v1alpha1/servicetypes/cluster/spec.yaml
